# docs/swagger.json
@@ -631,7 +631,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Returns all plans including inactive. SUPER_ADMIN/ENGINEER only.",
+                "description": "Returns all plans including inactive with full features. SUPER_ADMIN/ENGINEER only.",
                 "produces": [
                     "application/json"
                 ],
@@ -653,7 +653,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/codeberg_org_azzet_azzetbe_internal_plan.PlanListResponse"
+                                                "$ref": "#/definitions/codeberg_org_azzet_azzetbe_internal_plan.PlanResponse"
                                             }
                                         }
                                     }
